feat: Item removal chore: Renaming chore: Removed export to CSM

--- a/CafeManager/ru.lproj/Localizable.strings
+++ b/CafeManager/ru.lproj/Localizable.strings
@@ -45,7 +45,7 @@
 "itemPrice" = "Стоимость";
 "alertMenuItemAddingInputParameters" = "Введите параметры";
 "alertConfirmDeletionOfItem" = "Подтвердите удаление";
-"alertConfirmDeletionOfItemMessage" = "Внимание! При удалении пункта меню будут удалены все заказы этой позиции из базы данных и недоступны в отчетах.";
+"alertConfirmDeletionOfItemMessage" = "Внимание! При удалении пункта меню он более не будет доступен для заказов и останется лишь в отчетах.";
 "Please choose an option" = "Пожалуйста выберите опцию";
 "Add manually" = "Добавить вручную";
 "Add from catalogue (English)" = "Добавить из каталога (Английский)";
