--- a/CafeManager/Base.lproj/Localizable.strings
+++ b/CafeManager/Base.lproj/Localizable.strings
@@ -45,7 +45,7 @@
 "itemPrice" = "Price";
 "alertMenuItemAddingInputParameters" = "Enter menu item parameters";
 "alertConfirmDeletionOfItem" = "Plese confirm deletion";
-"alertConfirmDeletionOfItemMessage" = "Warning! Once menu item is deleted, all orders of this item will be deleted from database and not available in History and Reports.";
+"alertConfirmDeletionOfItemMessage" = "Warning! After deleting a menu item, it will never be available for orders. It will only appear in reports.";
 "Please choose an option" = "Please choose an option";
 "Add manually" = "Add manually";
 "Add from catalogue (English)" = "Add from catalogue (English)";
